modify yml file to include correct command to run tests

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         - name: Test
           run: |
             npm install
-            npm run test
+            npm run test-component
 
         - name: Deploy
           if: github.ref == 'refs/heads/main'
