--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,4 +36,4 @@ jobs:
 
       # Run Cypress tests
       - name: Run Cypress tests
-        run: npm run test:component
+        run: npm run test-component
