--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,29 @@
 # Name of workflow
 name: Render Deploy
 
-# Trigger workflow on push to main branch or pull request to main branch
+# Trigger workflow on push to main branch
 on:
-    push:
-      branches: [main]
-    pull_request:
-      branches:
-        - main
-        
-# Jobs to carry out  
+  push:
+    branches: [main]
+
+# Jobs to carry out
 jobs:
-    ci:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v3
+  ci:
+    runs-on: ubuntu-latest
 
-        - name: Test
-          run: |
-            npm install
-            npm run test-component
+    steps:
+      # Checkout the repository
+      - uses: actions/checkout@v3
 
-        - name: Deploy
-          if: github.ref == 'refs/heads/main'
-          env:
-            DEPLOY_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
-          run: |
-            curl "$DEPLOY_URL"
-   
+      # Install dependencies and run tests
+      - name: Test
+        run: |
+          npm install
+          npm run test-component
+
+      # Trigger Render Deploy
+      - name: Deploy
+        env:
+          DEPLOY_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+        run: |
+          curl -X POST "$DEPLOY_URL"
