--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,9 @@ jobs:
           npm install
           npm run test-component
 
-      # Trigger Render Deploy
+      # Trigger Render Deploy Hook
       - name: Deploy
         env:
           DEPLOY_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
         run: |
-          curl -X POST "$DEPLOY_URL"
+          curl "$DEPLOY_URL"
