added debugging code to deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,10 @@ jobs:
           npm install
           npm run test-component
 
+      # Debug Deploy URL (for troubleshooting)
+      - name: Debug Deploy URL
+        run: echo "Deploy URL: $DEPLOY_URL"
+
       # Trigger Render Deploy Hook
       - name: Deploy
         env:
